# rwh-stack

./: .gitignore  ReadMe.md  rwh-stack.cabal
ch01/: WC.hs
ch02/: myDrop.hs
ch03/: AlgebraicVector.hs  BadIndent.hs  BadTree.hs  BogusPattern.hs  BookStore.hs  Braces.hs  GoodIndent.hs  Indentation.hs  ListADT.hs  MySecond.hs  Nullable.hs  Tree.hs  letwhere.hs
